


syntax ="proto3";
package stocktrading;
option java_multiple_files=true;
option java_package ="com.demo";
option java_outer_classname="StockTradingProto";




// this is service that accept some Request and Provide response
service StockTradingService{

  // unary -RPC -> get current stock price
  rpc getStockPrice(StockRequest) returns (StockResponse);

}


message StockRequest{
  string stock_symbol=1;
}

message StockResponse{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}